# ChangeLog for dev-qt/qtwebkit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtwebkit/ChangeLog,v 1.19 2014/09/28 18:27:38 pesa Exp $

  28 Sep 2014; Davide Pesavento <pesa@gentoo.org>
  +files/qtwebkit-5.3.2-use-gstreamer010.patch:
  Add missing patch.

*qtwebkit-5.3.2-r1 (28 Sep 2014)

  28 Sep 2014; Davide Pesavento <pesa@gentoo.org> +qtwebkit-5.3.2-r1.ebuild,
  -qtwebkit-5.3.2.ebuild, metadata.xml:
  Build against gstreamer:1.0 with USE=gstreamer, and introduce USE=gstreamer010
  to build against old gstreamer:0.10. Patch by Uwe L. Korn, fixes bug #523518.

  25 Sep 2014; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Remove unused USE flag.

  25 Sep 2014; Michael Palimaka <kensington@gentoo.org> qtwebkit-5.3.2.ebuild:
  Remove widgets USE flag wrt bug #448178 as it causes build failure when
  disabled.

*qtwebkit-5.3.2 (16 Sep 2014)

  16 Sep 2014; Davide Pesavento <pesa@gentoo.org> +qtwebkit-5.3.2.ebuild,
  -qtwebkit-5.3.1-r3.ebuild:
  Version bump.

*qtwebkit-5.3.1-r3 (11 Sep 2014)

  11 Sep 2014; Davide Pesavento <pesa@gentoo.org> +qtwebkit-5.3.1-r3.ebuild,
  metadata.xml:
  Import Qt5 from qt overlay.

  23 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> -qtwebkit-5.2.1.ebuild:
  Drop qt5 ebuild.

*qtwebkit-5.2.1 (23 Apr 2014)

  23 Apr 2014; Patrick Lauer <patrick@gentoo.org>
  +files/qtwebkit-5.2.1-disable-gstreamer.patch, +qtwebkit-5.2.1.ebuild,
  metadata.xml:
  Import qt5 from qt overlay

  26 Jan 2014; Davide Pesavento <pesa@gentoo.org> -qtwebkit-4.8.4.ebuild,
  metadata.xml:
  Cleanup.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> qtwebkit-4.8.5.ebuild:
  Stable for ia64, wrt bug #494728

  07 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtwebkit-4.8.5.ebuild:
  Stable for arm, wrt bug #488536

  04 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtwebkit-4.8.5.ebuild:
  Stable for ppc64, wrt bug #488536

  04 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtwebkit-4.8.5.ebuild: