@@ -8,25 +8,24 @@ AUX qtwebkit-5.3.2-use-gstreamer010.patch 926 SHA256 444964b7af1ace629efb160efb4
 DIST qt-everywhere-opensource-src-4.8.5.tar.gz 241491467 SHA256 eb728f8268831dc4373be6403b7dd5d5dde03c169ad6882f9a8cb560df6aa138 SHA512 47118d1aa30c59a1eb74e805023cd060edcb35bb0944fe6651889254b75acbd4b83700ba92a9bc215663474d26330cb44f084098c380fac9270742659e5864eb WHIRLPOOL a18f47fd91b522d1543e415aff4f5056202e0cab03da9cfcae9fe2d4118cb1dd1d5fd6a5e2edb9c1e4a68563188d44440e234d268d9c0aef6e3ca3f0988dd357
 DIST qtwebkit-opensource-src-5.3.2.tar.xz 33445540 SHA256 e47122ed15e8e1cc32e11b3cd89bacc056437215134a204899f2fddb4fd92e5b SHA512 f04e18b550fe0feb1451361339f0a71cd95f65f6a1989b157ed79291e20fb42490f176fc30932ccf4326865ae6f01688b6ad5af7ac6a434d25add5f6557d175c WHIRLPOOL dd5313db10ef23feb134235f7df93733b1d6a93dd0d1e324b6688559f05625edabed6e069df5ba783cc5f8e91649adc373e803fc2fd16c5b984473fc1a145523
 EBUILD qtwebkit-4.8.5.ebuild 2053 SHA256 04be7ac80d16a4f2b9f12039d86ab9de9d645256f11ae9eebe5d0544ebb62253 SHA512 1bec3aec1bbc90f3148d798bd57cb4d92cd638048905e33d3aac8e3844b341839ceb4f50b41b54532dcbd87a3454e9a464c4e47953202e03519e5bd16cd9275a WHIRLPOOL 08d7e1948d1aff0806a4ade799effd42ae462d859d59321e10610020c4f038468735843e7d042a9a64970a8eae756adfb7b0927cd59b816de160dbeccbd05109
-EBUILD qtwebkit-5.3.2-r1.ebuild 3026 SHA256 8db36a185cd6e5f9b1402764bf497c8ce1f38165963396d7759eb1e2b517c36b SHA512 aab5e994dc9411e3b00418e2584cc70d0c545c425f324beb93e615b6675e34eaf3a40646ecd538ecf51635f3a603bbf44d0a08483d3fe633324a3d36c569c8a4 WHIRLPOOL 6f7938365efe9e7e7b773889c015db69d549f7bf30847457581323a19856acb310b2790be063e61648ef716474fa956dd5ebe745f2fe447f49b2954f57b8c541
-MISC ChangeLog 28410 SHA256 f334045f2198372b73e548cd67d9a193e3b8a29ca0c928f0f8f77eb98839bfc1 SHA512 d941db9cece64abb33646ff03a6ace9015b79769ec47e7e59bf25f96f6fdebd59a87002d4c9be3c1678e3682ddf9f0299eadb369df6218a062fe07b6d1106923 WHIRLPOOL 83a4b4fbf5ac6afd96d8cbd91bd6157b8591311d10a1c7ebca964bf96778f103be47d215741d2af77b7326d7609d403e200eed422b2d1caaa78128883ebcd48e
-MISC metadata.xml 1081 SHA256 98e8d87c896c97e6b92e2164da0a61417aff376d0543984442a4d14f9941bbcd SHA512 79bcbbd1daf0e20fc35fb5c1a2468459dc5d6ada32d58168d89a5967c05b91302a4c65902a1f16265ae02daa1d62c3f0479752a96a8d092b1d0b00a82f1d07c8 WHIRLPOOL e9f94b94753dfe90f313a713dfa82b5f136cb5ca3a147b420e6b02a040a00539698f84735d5b351bdde1e537d659b212c1a9ea45e1c6c5409260d617e8aa9bd0
+EBUILD qtwebkit-5.3.2-r1.ebuild 2664 SHA256 6729973ee137bf0a6c1c4a7ad46c54c07200c9c7a4a0b1a87a836b4cce279bef SHA512 f0f7aab07708e455379ad37a9c11cdd841dd1850762b977f1466e926f02d057902a45a5e5e907444ebf6338f3251f92efa037fb2255bf11356eae65f634a7e34 WHIRLPOOL 1304a8b831f259dbcacfe36ede6e6be123d0e0f0106cf7bcfe8188f45fe6bc4e4242621fb6a8f4c4f1b6a8eb3e755a77814e2de8ad733c380918c9e33b768ca9
+MISC ChangeLog 28568 SHA256 27a8801989f2be89587d4ccab12b551c2fc859a4363aedc92b41b9c3c5066694 SHA512 57d073baa19d2db31459d97f28e7f1befaef9449350ea5cc04ccd2c2b83e920ecad4dc2fb73914ccf28246d64fa6edfc13a88fd8edc04f71e2252f745e886f96 WHIRLPOOL ab79f9644aa07b02b253cce46118943ce1e1b9d0ba32962fc934078186fbba552adbcd8c6fa8693b5cbe5e41f9af429e48673398eeab325b70927e29d877a130
+MISC metadata.xml 956 SHA256 689104eb521694211986471cd9c5210d27a94ca86c7d87204d6b28f9059e6f2b SHA512 fa0cbc052f4731e70dfc602901363ebe8a85cd406788db3478c4f48296f3c4c6bce33a1c1c49d42d9a8fa78a72495fd142b01403b8286918b449d9120624bf80 WHIRLPOOL d65aca48bd37c6a3f133beb39b8091d5613bd6b58106bff0991c1faedbccdfb577be8090c77e0b130d13298baa7f8e6d3f5c63561bfa0ed9a412a0812441d364
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUKFMbXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9roIP/jnHQB0I7gTbanYSu0yGE39t
-sYOYG0KC8u8uCAkRnjTp3is7bTUUo+hxt50ReZPjX1d8g2tki/Vlbe5Lvrm2+JZP
-JxiJ0j9z7Deq2yGk9LT0KWBey4+14RS3OrwFqIB+zHGmtp/+2TGrcwOwhCDqvW5K
-nOX1qOiaQB0jlp/Opv06zQkf3sPAxUEVm7I81BaAz1NTk4brrIXn8OocRXgr0f0i
-YUTz0FHxNd1gQwCztuPkAXvTWFH8QjJXexxEKEibHVkwKIG88D5EutBQEPQg5QcI
-xC8hK36LVm33rGtof1qweE3JMG4ZHoJML2s4kHErUUktmHKFiBkJO//i3oRXcBXN
-5usbAlaXeiApHTIAIA9pZKnPQw1n6VxejuFnYB6/3vFTIDFBd7kb8gl1EV5AXWEQ
-1aMta7SVQPgG0ywGXwpvtolKkEUQyB9UW3gKPCpiIJB8MhXbkFVMxsPKwoPY7Fo8
-Z+PA08VcQywqMmEioUeX1kgy9zXIw82v7C5kBjAMhIg3RAoj+92DxcsK3rNilPml
-IXNvbHTkuSylY3XdmZ7M9ZBzGXzQ0MyCqVcUal0kytGhtLVG+6fUuq8OHE8p7U4j
-sVDgvHsYAV+zwTyu7rkSd9f+8FmZGnxRq+7BesSTW/KsJTLqyHsGaz6ki49/8zSd
-5/7JqBpFt64Nr4FmEFa+
-=I3Zd
+iQJiBAEBCABMBQJUR+vfRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7MO2D/4sL4HWrcFBNHn1+rL571MhzUv4O/jdnfHZ5HYOfP6s/6buk90ZJgTb23Q+
+frzO//f0YwiZa9tkRHfKLcprCtaeqURXWEr6xyqNPVbPncFmo4gb4KLTBseqtdpQ
+ZU6tRQD2GX9G9hPifLbZ4fIY9jpBbEFS14Z8wTttICqnfDKb2vZFikhqj+m76xwQ
+ghDpFrIWyaFktJyJlhaVxXlfjrbueOyoSMGAJKj5m3bCRxD0FqWvClo+qpo76K4Z
+9O+roj/B+CI41eI1a8zmmTmuKl5g1sSfjtx7olY0MDdcl4g74aBXPGq0MCkUxCjP
+Di14O7wlTerdNagx+SOYq9nOz1RN4+43SnOEliVh0WeQLa3cQklEzm016+X+Nd1L
+7mtnF5s+sbAzs6x8xAjyp9CJGh4HQRgRY5vqTRfujD5Xa06PpSJd5BCz4cjS4vv8
+Z6ib15Nsaat0uB/qXNUvuZlV0vFHR27P5juhxdxmnpGeX0RacT0hUINQMz14HFmp
+hwsZ7QRDZ13bo0NQntl+NJKtLSd0B4dqrfae3E6z7EXVYiHLn9nHOTNrHYBdAZxk
+T9l5DLjUpCOPqpKqDfZ4A65mKEBUsOEk3XcQ7sH0r06m0BnvOT/LtQmPBqu2N+wS
+bmUgG1Fx2Ary4PEzvI9O+P+eLi4ooNmq2kZRxDp/IxRtqwyhmw==
+=zej7
 -----END PGP SIGNATURE-----
