@@ -8,12 +8,10 @@
 		<flag name="gstreamer">Enable HTML5 audio/video support via <pkg>media-libs/gstreamer</pkg></flag>
 		<flag name="gstreamer010">Enable HTML5 audio/video support via <pkg>media-libs/gstreamer:0.10</pkg>
 			instead of :1.0</flag>
-		<flag name="libxml2">Use <pkg>dev-libs/libxml2</pkg> for XML parsing</flag>
 		<flag name="multimedia">Enable HTML5 audio/video support via <pkg>dev-qt/qtmultimedia</pkg></flag>
 		<flag name="printsupport">Enable printing via <pkg>dev-qt/qtprintsupport</pkg></flag>
 		<flag name="qml">Build QML/QtQuick bindings</flag>
 		<flag name="webp">Add support for WebP image format</flag>
-		<flag name="xslt">Enable XSLT support</flag>
 	</use>
 	<upstream>
 		<bugs-to>https://bugreports.qt-project.org/</bugs-to>
